disabled css minification; added jquery scrollbar; docs border fix

--- a/app/assets/stylesheets/blocks/documents.styl
+++ b/app/assets/stylesheets/blocks/documents.styl
@@ -21,7 +21,7 @@
     padding 21px 199px 0 60px
     margin-right 30px
     margin-bottom 21px
-    border 2px solid #d3d7d8
+    border 1px solid #d3d7d8
     max-height 500px
     overflow hidden
     transition all 0.3s
@@ -36,7 +36,6 @@
       top 16px
       background-image url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABYAAAAXCAMAAAA4Nk+sAAAABlBMVEUAAACMkZdLeeaXAAAAAXRSTlMAQObYZgAAAB1JREFUeAFjYMQKSBdmQAMEhRHayRZGAaNWUiUuAVDiAUVVijeIAAAAAElFTkSuQmCC');
     &_collapsed
-      border-width 1px
       max-height 60px
       margin-bottom 11px
     &__header
